--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,58 @@
-# CakePHP 3
+# Ignore logs and debug files
+*.log
+*.sql
+*.sqlite
+*.sqlite3
 
-/vendor/*
-/config/app.php
+# Composer dependencies
+/vendor/
+composer.lock
 
-/tmp/cache/models/*
-!/tmp/cache/models/empty
-/tmp/cache/persistent/*
-!/tmp/cache/persistent/empty
-/tmp/cache/views/*
-!/tmp/cache/views/empty
-/tmp/sessions/*
-!/tmp/sessions/empty
-/tmp/tests/*
-!/tmp/tests/empty
+# Ignore IDE/editor specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
 
-/logs/*
-!/logs/empty
+# Windows system files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
 
-# CakePHP 2
+# Ignore the local phpstorm config directory (PHPStorm IDE)
+.phpstorm.meta.php
 
-/app/tmp/*
-/app/Config/core.php
-/app/Config/database.php
-/vendors/*
+# Ignore SASS cache files
+.sass-cache/
+
+# Ignore node_modules (if using Node.js tools)
+node_modules/
+
+# Ignore build files
+/build/
+*.min.js
+*.min.css
+
+# Ignore generated HTML files (if using any preprocessor)
+*.html.generated
+
+# Ignore the following Visual Studio Code files
+.vscode/
+.vscode/*
+.vscode/*.*
+
+# Ignore macOS system files
+.DS_Store
+
+# Ignore temporary files
+*.tmp
+*.temp
+*.bak
+*.swp
+*.swo
+
+# Ignore the environment file
+.env
+.env.local
+.env.*.local
